--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,9 @@
-:root {
+body {
+  margin: 0;
+  background-color: #240202;
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -79,11 +84,7 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -104,4 +105,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
