--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'nfs';
+  src: url('/font/nfs.woff2') format('woff2'),
+        url('/font/nfs.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+  .homeTitle{
+    font-family:'nfs';
+    font-size: 3rem;
+    color: white;
+    text-align: center;
+  }
+
 .home video {
   width: 100%;
   height: 100%;
@@ -12,7 +28,7 @@
   width: 90px;
   height: 90px;
   border-radius: 50%;
-  background-color: hsla(0, 89%, 7%, 0.6);
+  background-color: #22020299;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,3 +70,4 @@
   transform: translateY(4px) scale(0.98);
   box-shadow: none;
 }
+
