--- a/components/navbar/public/sass/navbar.module.scss
+++ b/components/navbar/public/sass/navbar.module.scss
@@ -2,9 +2,10 @@
   padding: 1rem 0;
   position: fixed;
   top: 0;
+  height: 30px;
   width: 100%;
-  background-color: #220202d8;
-  z-index: 1;
+  z-index: 6;
+  background-color: #240202;
 
 
   .navList {
