--- a/components/carrousel/public/sass/carrousel.module.scss
+++ b/components/carrousel/public/sass/carrousel.module.scss
@@ -3,9 +3,9 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-}
-
-.item {
+  }
+  
+  .item {
     position: absolute;
     top: 0;
     left: 0;
@@ -15,10 +15,18 @@
     background-position: center;
     opacity: 0;
     transition: opacity 0.5s;
-}
-
-.item.active {
+    
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.365); /* Fond semi-transparent */
+    }
+  }
+  
+  .item.active {
     opacity: 1;
-}
-
-
+  }
