--- a/components/footer/public/sass/footer.module.scss
+++ b/components/footer/public/sass/footer.module.scss
@@ -1,66 +1,120 @@
 .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #22020299;
-    width: 100%;
-    font-size: 1rem;
-    color:white;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to top, #240202, #3c0303, #540404, #6c0606, #840808);
+  margin: 0;
+  width: 100%;
+  font-size: 1rem;
+  color: white;
+  border: none;
+
   .containerFooter {
     display: flex;
     align-items: center;
-    width: 90%;
-    // height: 100%;
-    // flex-wrap: wrap;
     justify-content: space-evenly;
-  }
-  
-  .col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
-    // height: 100%;
-    padding: 40px;
-    // max-width: 350px;
-    margin-bottom: 40px;
+    width: 90%;
 
-    img{
-        width:40px;
-        height: 40px;
+    .col {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 80%;
+      padding: 40px;
+      margin-bottom: 40px;
+
+      a {
+        text-decoration: none;
+        color: white;
+        transition: all 0.3s ease;
+
+        &:hover {
+          color: #ccc;
+        }
+      }
+
+      .titre {
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin-bottom: 20px;
+      }
+
+      .liste {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+          margin-bottom: 10px;
+        }
+      }
     }
   }
-  
-  .titre {
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 20px;
+
+  .logo {
+    color: #fff;
+    font-size: 1.2rem;
+    transition: all 0.3s ease;
+
+    img {
+      width: 40px;
+      height: 40px;
+      transition: all 0.3s ease;
+    }
+
+    &:hover {
+      color: #ccc;
+    }
+
+    &:hover img {
+      transform: rotate(-90deg);
+    }
+  }
+  .socialIcons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .containerFooter {
+      flex-direction: column;
+      align-items: stretch;
+    }
+
+    .col {
+      padding: 20px;
+      text-align: center;
+    }
+
+    .col:first-child {
+      margin-bottom: 40px;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .col {
+  padding: 10px;
+  text-align: left;
   }
   
-//   .list {
-//     list-style: none;
-//     padding: 0;
-//     margin: 0;
-//   }
+  .col:first-child {
+  margin-bottom: 20px;
+  }
   
-//   .list li {
-//     margin-bottom: 10px;
-//   }
+  .footerText {
+  font-size: 0.8rem;
+  }
+  }
+  @media only screen and (min-width: 1200px) {
+  .socialIcon {
+  font-size: 1.5rem;
+  }
+  }
   
-//   .list li a {
-//     color: #333;
-//     text-decoration: none;
-//   }
   
-//   .list li a:hover {
-//     text-decoration: underline;
-//   }
   
-//   @media screen and (min-width: 768px) {
-//     .col {
-//       width: 33.33%;
-//       margin-bottom: 0;
-//     }
-//   }
+  
