--- a/components/navbar/public/components/recherche/public/sass/recherche.module.scss
+++ b/components/navbar/public/components/recherche/public/sass/recherche.module.scss
@@ -1,57 +1,55 @@
 .recherche {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    top: 80px;
-    left: 330px;
-  
-    width: 360px;
-  
-    input {
-      width: 200px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  margin: 0 ;
+  list-style: none;
+  padding: 8px;
+
+
+  input {
+    width: 200px;
       border: solid 1px rgb(225, 1, 123);
       padding: 10px;
-    }
-  
-    .search {
-      position: absolute;
-      top: 10px;
-      left: 238px;
-      color: rgb(225, 1, 123);
-      font-size: 1.5rem;
-    }
-  
-    .react-autosuggest__suggestions-container {
-      position: absolute;
-      z-index: 1;
-      max-width: 220px;
-      border: solid 1px rgb(225, 1, 123);
-  
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    }
-  
-    .react-autosuggest__suggestion {
-        margin-left: -40px;
-        margin-top: -15px;
-        margin-bottom: 6px;
-        padding: 9px;
-        cursor: pointer;
-        list-style: none;
-        &:hover {
-            background-color: #f2f2f2;
-        }
-        }
-  
-    .suggestion-item {
-      display: flex;
-      align-items: center;
-    }
-  
-    .suggestion-image {
-      width: 40px;
-      height: 40px;
-      margin-right: 10px;
-      object-fit: cover;
-    }
+
   }
+
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border-radius: 0 0 4px 4px;
+  z-index: 2;
+  max-height: 200px;
+  overflow-y: auto;
+  list-style: none;
+
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  list-style: none;
+
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+  list-style: none;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
+  list-style: none;
+
+}
+}
