--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: 'nfs';
   src: url('/font/nfs.woff2') format('woff2'),
@@ -6,12 +7,12 @@
   font-style: normal;
 }
 
-
-  .homeTitle{
+  .homeTitre{
     font-family:'nfs';
     font-size: 3rem;
     color: white;
     text-align: center;
+    z-index: 999;
   }
 
 .home video {
@@ -42,7 +43,7 @@
 
 .homeButton::before {
   content: '';
-  border: 2px solid hsla(0, 89%, 15%, 0.5);
+  border: 4px solid hsla(0, 89%, 15%, 0.5);
   width: 110px;
   height: 110px;
   position: absolute;
