--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,8 @@
 body {
+  background: linear-gradient(to bottom, #240202, #3c0303, #540404, #6c0606, #840808);
+  padding: 0;
   margin: 0;
-  background-color: #240202;
 }
-
-
 
 /* :root {
   --max-width: 1100px;
