--- a/components/footer/public/sass/footer.module.scss
+++ b/components/footer/public/sass/footer.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to top, #240202, #3c0303, #540404, #6c0606, #840808);
+  background: linear-gradient(to bottom, #0a0a0a, #141414, #1e1e1e, #282828, #323232, #3c3c3c, #464646, #3c3c3c, #323232, #282828, #1e1e1e, #0a0a0a);
   margin: 0;
   width: 100%;
   font-size: 1rem;
