--- a/components/navbar/public/sass/navbar.module.scss
+++ b/components/navbar/public/sass/navbar.module.scss
@@ -5,7 +5,9 @@
   height: 30px;
   width: 100%;
   z-index: 6;
-  background-color: #240202;
+  background: linear-gradient(to bottom, #141414, #1e1e1e, #282828, #323232, #3c3c3c, #464646, #3c3c3c, #323232, #282828, #1e1e1e);
+
+
 
 
   .navList {
