--- a/components/car/public/sass/car.module.scss
+++ b/components/car/public/sass/car.module.scss
@@ -1,42 +1,81 @@
-.carPage {
+.contenu {
   display: flex;
   flex-direction: column;
-  // position: absolute;
+  justify-content: center;
   align-items: center;
-  background-color: white;
-  border-radius: 10px;
-  // height: 350px;
-
-  .carTitre {
-    height: 20px;
-    font-size: 1rem;
-    text-align: center;
+  position: absolute;
+  padding: 3rem;
+  color: white;
+  border-radius: 50% ;
+  z-index: 2;
+  opacity: 0; 
+  transition: opacity 0.5s ease-in-out, top 0.3s ease-in-out;
+  animation: moveIn 1s ease-out;
+  height: 200px;
+  width: 200px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(255, 255, 255, 0.3);
+  
+  &:before {
+      content: '';
+      position: absolute;
+      border-radius: 50%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 4;
+      background-color: rgba(0, 0, 0, 0.83);
   }
-  .carInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // padding: 1rem;
-    
-    .carImage {
-      width: 100%;
-      min-width: 300px;
-      max-height: 180px;
-      object-fit: cover;
-    }
-    
-    .carDetails {
-      display: flex;
-      flex-direction: column;
-      list-style: none;
+
       
-      span{
-        color: black;
+
+      .texte{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          z-index: 100;text-align: center;
+          
+          
+      }    
+      h1 {
+      font-family: 'nfs';
+      font-size: 2rem;
+  }
+
+  @keyframes moveIn {
+      0% {
+          transform: translateY(-100%);
+          opacity: 0;
+      }
+      100% {
+          transform: translateY(0);
+          opacity: 1;
       }
   }
+
+  div {
+      font-size: 1rem;
+      p {
+          margin: 0;
+      }
   }
 }
 
+.contenu.visible{
+  opacity: 1; /* visible quand la classe "visible" est ajoutée */
+}
+
+
+
+@media (max-width: 768px) {
+.contenu {
   
+  padding: 2rem;
   
-  
+
+  h1 {
+      font-size: 1rem;
+  }
+}
+}
