--- a/components/carrousel/public/sass/carrousel.module.scss
+++ b/components/carrousel/public/sass/carrousel.module.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background-color: transparent;
   }
   
   .item {
@@ -23,7 +24,6 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0, 0, 0, 0.365); /* Fond semi-transparent */
     }
   }
   
