--- a/components/navbar/public/components/recherche/public/components/carRecherche/public/sass/carRecherche.module.scss
+++ b/components/navbar/public/components/recherche/public/components/carRecherche/public/sass/carRecherche.module.scss
@@ -16,11 +16,14 @@
   font-weight: 600;
   margin-bottom: 20px;
   color: #333;
+  text-decoration: none;
 }
 
 .carInfo {
   display: flex;
   align-items: center;
+  text-decoration: none;
+
 }
 
 .carImage {
