--- a/components/navbar/public/components/recherche/public/sass/recherche.module.scss
+++ b/components/navbar/public/components/recherche/public/sass/recherche.module.scss
@@ -1,55 +1,50 @@
 .recherche {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  margin: 0 ;
-  list-style: none;
-  padding: 8px;
+  position: relative;
 
 
-  input {
-    width: 200px;
-      border: solid 1px rgb(225, 1, 123);
-      padding: 10px;
+  .input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    outline: none;
 
+    &:focus {
+      border-color: #000;
+    }
   }
 
-.react-autosuggest__suggestions-container--open {
-  display: block;
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  border: 1px solid #aaa;
-  background-color: #fff;
-  font-family: Helvetica, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  border-radius: 0 0 4px 4px;
-  z-index: 2;
-  max-height: 200px;
-  overflow-y: auto;
-  list-style: none;
+  .suggestionContainer {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 300px;
+    overflow-y: auto;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 0.25rem 0.25rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-}
+    .suggestion {
+      padding: 0.5rem;
+      cursor: pointer;
 
-.react-autosuggest__suggestions-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  list-style: none;
+      a{
+        text-decoration: none;
 
-}
+      }
 
-.react-autosuggest__suggestion {
-  cursor: pointer;
-  padding: 10px 20px;
-  list-style: none;
-}
 
-.react-autosuggest__suggestion--highlighted {
-  background-color: #ddd;
-  list-style: none;
+      &:hover {
+        background-color: #f5f5f5;
+      }
 
-}
+      &:not(:last-child) {
+        border-bottom: 1px solid #ccc;
+      }
+    }
+  }
 }
