--- a/components/carDetails/public/sass/carDetails.module.scss
+++ b/components/carDetails/public/sass/carDetails.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  justify-content: center;
   background-color: #fff;
   border-radius: 1rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
@@ -15,14 +15,22 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(
+    background: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0),
       rgba(255, 255, 255, 0.8)
     );
     pointer-events: none;
+    z-index: 2;
   }
-
+.carDetailsText{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  margin: 5%;
+}
   .carTitle {
     font-size: 2.5rem;
     font-weight: 700;
@@ -81,6 +89,7 @@
       flex-wrap: wrap;
       justify-content: center;
       margin-bottom: 2rem;
+      z-index: 5;
 
       li {
         font-size: 1.5rem;
@@ -88,6 +97,7 @@
         text-align: center;
         font-weight: 500;
         animation: fadeIn 1s ease-in-out 1s forwards;
+        z-index: 9;
 
         span {
           font-weight: bold;
@@ -115,4 +125,7 @@
       transform: none;
     }
   }
+}
+.googleMapsContainer{
+  z-index: 33;
 }
