--- a/styles/catalogue.module.scss
+++ b/styles/catalogue.module.scss
@@ -1,13 +1,32 @@
-.catalogueContainer {
+.container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
+  
+  .catalogueContainer {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   list-style: none;
   gap: 4rem;
   margin-bottom: 0px;
-  padding: 50px;
-background-color: white;
+  width: 80%;
+  background-color: white;
+  padding-top: 50px;
+  padding-left: 35px;
+
+
+  .catalogueList{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+    list-style: none;
+  }
+
 }
+}
+
+
+
 
 .catalogueListItem {
   position: relative;
