--- a/components/sideBar/public/sass/sideBar.module.scss
+++ b/components/sideBar/public/sass/sideBar.module.scss
@@ -2,8 +2,11 @@
     width: 20%;
     height: 100%;
     background-color: #f6f6f6;
-    padding: 20px;
-  
+    // position: fixed;
+    // padding: 20px;
+  .containerSideBar{
+    padding: 30px;
+  }
     .colorList {
       list-style: none;
       padding: 0;
