--- a/styles/catalogue.module.scss
+++ b/styles/catalogue.module.scss
@@ -1,7 +1,16 @@
 .container {
   display: flex;
   flex-direction: row;
-  
+  justify-content: center;
+  margin-top: 50px;
+  // align-items: center;
+
+  .image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+  }
   .catalogueContainer {
   display: flex;
   flex-direction: column;
@@ -69,4 +78,10 @@
     width: 200px;
     height: 200px;
   }
+}
+
+.filterIcon {
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
 }
