--- a/components/carDetails/public/sass/carDetails.module.scss
+++ b/components/carDetails/public/sass/carDetails.module.scss
@@ -126,6 +126,8 @@
     }
   }
 }
-.googleMapsContainer{
-  z-index: 33;
+.btnGoogle{
+  display: flex;
+  justify-content: center;
+  height: 40px;
 }
