--- a/components/carDetails/public/components/googleMaps/public/sass/googleMaps.module.scss
+++ b/components/carDetails/public/components/googleMaps/public/sass/googleMaps.module.scss
@@ -1,18 +1,11 @@
 .googleMapsContainer {
     position: absolute;
     overflow: hidden;
+    top: 40px;
+    left: 20px;
     max-width: 400px;
     max-height: 300px;
     transform: scale(1);
     border-radius: 5%;
-
     transition: transform 0.3s ;
 }
-  
-    // .googleMapsContainer:hover {
-    //     position: absolute;
-    //     top: 0;
-    //     transform: scale(1.2);
-        
-    //     border-radius: 5%;
-    // }
