--- a/components/navbar/public/sass/navbar.module.scss
+++ b/components/navbar/public/sass/navbar.module.scss
@@ -5,7 +5,7 @@
   height: 30px;
   width: 100%;
   z-index: 6;
-  background: linear-gradient(to bottom, #141414, #1e1e1e, #282828, #323232, #3c3c3c, #464646, #3c3c3c, #323232, #282828, #1e1e1e);
+  background: radial-gradient( #1e1e1e, #141414,);
 
 
 
@@ -44,4 +44,18 @@
 }
 .navLink:hover img {
   transform: rotate(-90deg);
+}
+
+// .navItem {
+//   display: inline-block;
+//   margin: 0 5px;
+//   font-size: 18px;
+//   &:hover {
+//     text-decoration: underline;
+//     cursor: pointer;
+//   }
+// }
+
+.connected .navLink {
+  color: green;
 }
