--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -21,7 +21,6 @@
   height: 100%;
   object-fit: cover;
 }
-
 .homeButton {
   position: absolute;
   z-index: 888;
@@ -30,7 +29,8 @@
   width: 90px;
   height: 90px;
   border-radius: 50%;
-  background-color: #22020299;
+  background: radial-gradient( #1e1e1e, #141414,);
+  // background-color: #464646 ;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,7 +44,7 @@
 
 .homeButton::before {
   content: '';
-  border: 4px solid hsla(0, 89%, 15%, 0.5);
+  border: 4px solid  #141414;
   width: 110px;
   height: 110px;
   position: absolute;
