--- a/styles/catalogue.module.scss
+++ b/styles/catalogue.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 100px;
   // align-items: center;
 
   .image{
@@ -19,7 +19,9 @@
   gap: 4rem;
   margin-bottom: 0px;
   width: 80%;
-  background-color: white;
+  // background: radial-gradient( #1e1e1e, #141414,);
+
+  // background-color: white;
   padding-top: 50px;
   padding-left: 35px;
 
@@ -50,6 +52,7 @@
   justify-content: center;
   list-style: none;
   padding: 2rem 0;
+  color: white;
 }
 
 .paginationPage {
