--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
 body {
-  background: linear-gradient(to left, #000000, #0a0a0a, #141414, #1e1e1e, #282828, #323232, #3c3c3c, #464646, #3c3c3c, #323232, #282828, #1e1e1e, #0a0a0a, #000000);
-  
-  // background: linear-gradient(to bottom, #240202, #3c0303, #540404, #6c0606, #840808);
+  background: radial-gradient( #323232, #141414,);
+
+  // background: linear-gradient(to left, #0a0a0a, #141414, #1e1e1e, #282828, #323232, #3c3c3c, #464646, #3c3c3c, #323232, #282828, #1e1e1e, #0a0a0a);
   padding: 0;
   margin: 0;
 }
