--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -4,8 +4,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background: radial-gradient( #323232, #141414,);
     margin: 0;
+    
     form {
     margin: 0 auto;
     max-width: 600px;
@@ -17,7 +18,8 @@
         label {
             font-size: 1.2rem;
             margin-bottom: 0.5rem;
-            color: #333;
+            color: white;
+
         }
         
         input, textarea {
@@ -30,8 +32,8 @@
         }
         
         button[type="submit"] {
-            background-color: #007bff;
-            color: #fff;
+            background-color: white;
+            color: black;
             padding: 0.5rem 1rem;
             border: none;
             border-radius: 4px;
